Fix header color on Safari

--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,12 @@ main {
 h1 {
   font-size: 3rem;
   font-weight: 200;
+  color: var(--text-light);
 }
 h2 {
   font-size: 2rem;
   font-weight: 200;
+  color: var(--text-light);
 }
 a:link,
 a:visited {
@@ -74,6 +76,12 @@ li:hover .mouseover {
 @media (prefers-color-scheme: dark) {
   body {
     background-color: var(--background-dark);
+    color: var(--text-dark);
+  }
+  h1 {
+    color: var(--text-dark);
+  }
+  h2 {
     color: var(--text-dark);
   }
   .arrow {
